added openapi definition for job pool endpoints
